Fixed white space on right side

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 
@@ -13,6 +14,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: white;
     size: 3rem;
+    font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
    
